# sionnach

./: main.py  pyproject.toml
data/: data - default.db  data.db
sionnach/: auth.py  character.py  config.py  db.py  engine.py  exceptions.py  log.py  main.py  server.py  util.py
sionnach/data/: data - default.db  data.db
tests/: test_sionnach.py
