[tool.poetry]
name = "sionnach"
version = "0.1.0"
description = ""
authors = ["ZechyW <ZechyW@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
black = "^19.10b0"
SQLAlchemy = "^1.3.15"
bcrypt = "^3.1.7"
pyppeteer2 = "^0.2.2"
nest_asyncio = "^1.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
